# face-recognition-classifiers-gui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/algorithms/: __init__.py  algorithm_factory.py  algorithm_loader.py  algorithm_wrapper.py  base.py  classifier_base.py  face_encoding.py  knn_classifier.py  svm_classifier.py
src/assets/ui/: addperson_screen.kv  app_ui.kv  createmodel_screen.kv  editmodel_screen.kv  editperson_screen.kv  facescanner_screen.kv  learningmode_screen.kv  my_popup.kv  persons_screen.kv  plot_popup.kv  wantedperson_screen.kv  widget_styles.kv
src/core/: config.py  enums.py  init.py  logger.py
src/models/: base_list_manager.py  base_registry.py  prediction.py
src/models/model/: model.py  model_list.py  model_metadata.py  model_registry.py  model_service.py  model_trainer.py  stored_model.py
src/models/person/: person.py  person_list.py  person_metadata.py  person_registry.py
src/services/: __init__.py  camera_service.py  model_service.py  person_service.py
src/ui/: base_screen.py  drop_button.py  screen_stack.py  widget_styles.py
src/ui/popups/: ask.py  box.py  delete.py  info.py  person_info.py  photo.py  plot.py  training_progress.py  warn.py
src/ui/presenters/: __init__.py  add_person_presenter.py  base_presenter.py  camera_presenter.py  (+7 more)
src/utils/: TimeUtils.py  add_padding.py  build_image_dataset.py  crop.py  data_manager.py  dev_script.py  drop_button.py  get_image_dimensions.py  get_time.py  gpu_info.py  helpers.py  img_resize.py  logger.py  migrate_person_data.py  photo_manager.py
(+15 files in other folders)
