[project]
name = "faceid"
version = "1.0.0"
description = ""
authors = [
    {name = "Andrii Sonsiadlo",email = "andrii.sonsiadlo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "numpy (==1.24.4)",
    "matplotlib (==3.7.2)",
    "scikit-learn (==1.3.2)",
    "opencv-python (==4.6.0.66)",
    "docutils (==0.20.1)",
    "kivy (==2.3.1)",
    "pydantic (==1.10.24)",
    "imutils (==0.5.4)",
    "importlib-resources (==6.4.5)",
    "pypiwin32 (==223)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.2)",
    "pyparsing (==3.0.9)",
    "python-dateutil (==2.9.0.post0)",
    "pywin32 (==311)",
    "requests (==2.32.4)",
    "six (==1.17.0)",
    "urllib3 (==2.2.3)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "fonttools (==4.57.0)",
    "setuptools (==75.3.3)",
    "idna (>=3.11,<4.0)",
    "dlib @ file:///D:/Python_projects/FaceID/wheels/dlib-19.22.99-cp38-cp38-win_amd64.whl",
    "face-recognition (==1.3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
